--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -15,7 +15,7 @@ h1, h2, h3, h4, h5, h6,
 }
 
 .text-profile-bio {
-    /* font-family: "Raleway"; */
+    font-family: "Raleway"; 
     font-weight: 400;
 }
 
@@ -24,7 +24,7 @@ h1, h2, h3, h4, h5, h6,
 }
 
 .inline-badge {
-    height: 20px;
+    height: 25px;
     vertical-align: -10%;
     margin-right: 2px;
     line-break: unset;
