--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -15,7 +15,7 @@ h1, h2, h3, h4, h5, h6,
 }
 
 .text-profile-bio {
-    font-family: "Raleway"; 
+    /*font-family: "Raleway";*/ 
     font-weight: 400;
 }
 
@@ -24,7 +24,7 @@ h1, h2, h3, h4, h5, h6,
 }
 
 .inline-badge {
-    height: 25px;
+    height: 16px;
     vertical-align: -10%;
     margin-right: 2px;
     line-break: unset;
@@ -44,14 +44,6 @@ h1, h2, h3, h4, h5, h6,
 }
 
 img.lazy {
-    background-image: url('images/loading.gif');
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    background-size: 50px 50px;
-    min-height: 80px;
-}
-
-div.lazy {
     background-image: url('images/loading.gif');
     background-repeat: no-repeat;
     background-position: 50% 50%;
