--- a/_includes/widgets/experience_card.html
+++ b/_includes/widgets/experience_card.html
@@ -22,6 +22,17 @@
                                 </li>
                                 {% endfor %}
                             </ul>
+                            <h6>Honors & Awards</h6>
+                            <ul class="list small pl-3 mb-1">
+                                {% for item in site.data.profile.awards %}
+                                <li>
+                                    <div class="d-flex">
+                                        <div>{{ item.name }}</div>
+                                        <div class="ml-auto mt-auto no-break"><em>{{ item.date }}</em></div>
+                                    </div>
+                                </li>
+                                {% endfor %}
+                            </ul>
                         </div>
                     </div>
                     {% endif %}
