--- a/_includes/widgets/experience_card.html
+++ b/_includes/widgets/experience_card.html
@@ -23,6 +23,8 @@
                                 {% endfor %}
                             </ul>
                             <p style="margin-bottom: 1em;"></p>
+                            <p style="margin-bottom: 1em;"></p>
+                            <p style="margin-bottom: 1em;"></p>
                             <h6>Honors & Awards</h6>
                             <ul class="list small pl-3 mb-1">
                                 {% for item in site.data.profile.awards %}
